# none-plus-plus

./: CMakeLists.txt  README.md  TODO.md  calc copy.cpp  calc.cpp  calculator.cpp  calculator.h  functions.h  lexer.cpp  lexer.h  main.cpp  noneplusplus.g4  number.h  parser.cpp  parser.h  token.h  value.h
.history/: README_20220320221702.md  TODO_20220320220755.md  main_20220225105754.cpp  main_20220320221301.cpp  main_20220320221304.cpp  main_20220320221330.cpp  main_20220320221332.cpp  main_20220320221540.cpp  parser_20220225112458.cpp  parser_20220320221735.cpp
cmake/modules/: AddNpp.cmake
src/: CMakeLists.txt  calculator.cpp  calculator.h  functions.cpp  functions.h  lexer.cpp  lexer.h  main.cpp  number.h  parser.cpp  parser.h  token.cpp  token.h  value.cpp  value.h
tests/: CMakeLists.txt
tests/runner/: CMakeLists.txt  test.cc
